--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ docs/labs/lab4/.ipynb_checkpoints/scc2425-lab4-checkpoint.ipynb
 docs/labs/lab5/.ipynb_checkpoints/scc2425-lab5-checkpoint.ipynb
 scc2425-tukano/target/*
 .classpath
+.vscode
