--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ docs/labs/lab5/.ipynb_checkpoints/scc2425-lab5-checkpoint.ipynb
 scc2425-tukano/target/*
 .classpath
 .vscode
+scc2425-tukano/pom.xml
