--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -86,6 +86,11 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-storage-blob</artifactId>
+			<version>12.28.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>33.0.0-jre</version>
