--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -49,10 +49,12 @@
 			   <artifactId>tomcat7-maven-plugin</artifactId>
 			   <version>2.1</version>
 			       <configuration>
-			           <url>http://maven:s3cret@127.0.0.1:8080/manager/text</url>
-			           <server>tomcat-docker</server>
-			           <update>true</update>
-			           <path>/lab1</path>
+			           <url>http://127.0.0.1:8080/manager/text</url>
+                    	<server>tomcat-docker</server>
+                    	<username>maven</username>
+                    	<password>s3cret</password>
+                    	<update>true</update>
+                    	<path>/tukano-1</path>
 			       </configuration>
 			</plugin>
 			<plugin>
