--- a/scc2425-tukano/src/main/java/resources/azurekeys-region.props
+++ b/scc2425-tukano/src/main/java/resources/azurekeys-region.props
@@ -1,5 +1,14 @@
-# Date : 10/14/24, 10:16 AM
 BlobStoreConnection=DefaultEndpointsProtocol=https;AccountName=stoxxxxxnortheurope;AccountKey=R6eBqQeIwFjdvIX2fDg/eM3W0NudmStHEBmMrAoIzX5A0RLrWgUYD+c9yiZPV6jeTuEQF5oJJf6w+AStWoxHtA==;EndpointSuffix=core.windows.net
-COSMOSDB_KEY=Y5klYi99KVuT0Fod8vnffcnrE2CUA2teA4ENCkdn1RsvVMW4ugbN7Kwzdai7B6lSQLS3d09ApwpiACDbYOWsXQ==
-COSMOSDB_URL=https://cosmosxxxxx.documents.azure.com:443/
-COSMOSDB_DATABASE=cosmosdbxxxxx
+
+# Storage Account Secrets
+# Blobs and Containers
+STORAGE_ACCOUNT_CONNECTION=DefaultEndpointsProtocol=https;AccountName=scctukano70068;AccountKey=3HbFmeMeRintQiY47zzBdY/bWc/s2SvvzA9h+fClVf92W0c0E3QQ8GP/ve433Jozp2tQ0WGtrpSv+ASt3kZN0A==;EndpointSuffix=core.windows.net
+STORAGE_ACCOUNT_KEY=3HbFmeMeRintQiY47zzBdY/bWc/s2SvvzA9h+fClVf92W0c0E3QQ8GP/ve433Jozp2tQ0WGtrpSv+ASt3kZN0A==
+STORAGE_ACCOUNT_NAME=scctukano70068
+BLOB_CONTAINER_SHORTS=Shorts
+
+# Cosmo DB Secrets
+COSMOSDB_URL=https://scctukanocosmos70068.documents.azure.com:443/
+COSMOSDB_KEY=VByJA8a4Jp8QrnhLaVDhkHIDXOWWBcsUltiS12eLEe35NofjmVjKGajSXOF9iFJ17SZY2qhwEhMhACDbHpYZ1A==
+COSMOSDB_CONNECTION=AccountEndpoint=https://scctukanocosmos70068.documents.azure.com:443/;AccountKey=VByJA8a4Jp8QrnhLaVDhkHIDXOWWBcsUltiS12eLEe35NofjmVjKGajSXOF9iFJ17SZY2qhwEhMhACDbHpYZ1A==;
+COSMOSDB_DATABASE=scctukanocosmos70068
