--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -147,5 +147,15 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>2.0.16</version>
     	</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jersey.containers</groupId>
+		    <artifactId>jersey-container-servlet-core</artifactId>
+		    <version>3.1.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.bytebuddy</groupId>
+		    <artifactId>byte-buddy</artifactId>
+		    <version>1.12.7</version>
+		</dependency>
 	</dependencies>
 </project>
