Added caching for users and shorts.
Caching added for both users and shorts. Basic implementation is complete. Testing is needed.

Co-Authored-By: raa-pires-70068 <181831497+raa-pires-70068@users.noreply.github.com>

--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -157,5 +157,10 @@
 		    <artifactId>byte-buddy</artifactId>
 		    <version>1.12.7</version>
 		</dependency>
+    	<dependency>
+    	    <groupId>redis.clients</groupId>
+    	    <artifactId>jedis</artifactId>
+    	    <version>5.2.0</version>
+    	</dependency>
 	</dependencies>
 </project>
