--- a/scc2425-tukano/src/main/webapp/WEB-INF/web.xml
+++ b/scc2425-tukano/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <display-name>SCC BackEnd</display-name>
  <servlet>
     <servlet-name>Resteasy</servlet-name>
-    <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
      <init-param>
         <param-name>jakarta.ws.rs.Application</param-name>
         <param-value>tukano.impl.rest.TukanoRestServer</param-value>
