--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -157,5 +157,10 @@
 		    <artifactId>byte-buddy</artifactId>
 		    <version>1.12.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.4</version>
+		</dependency>
 	</dependencies>
 </project>
