--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -88,6 +88,11 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-storage-blob</artifactId>
 			<version>12.28.0</version>
