--- a/scc2425-tukano/yamlfiles/servicedb.yaml
+++ b/scc2425-tukano/yamlfiles/servicedb.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - name: http
-    port: 3001
-    targetPort: 3001
+  - name: postgres
+    port: 5432
+    targetPort: 5432
   selector:
     app: db-service
