Persistent storage yamls

--- a/scc2425-tukano/yamlfiles/deploymentdb.yaml
+++ b/scc2425-tukano/yamlfiles/deploymentdb.yaml
@@ -44,3 +44,11 @@ spec:
         - name: POSTGRES_USER
           value: sa
         - name: POSTGRES_PASSWORD
+          value: yourpassword
+        volumeMounts:
+        - mountPath: /var/lib/postgresql/data
+          name: postgres-storage
+      volumes:
+      - name: postgres-storage
+        persistentVolumeClaim:
+          claimName: postgres-pvc
