--- a/scc2425-tukano/yamlfiles/postgres-pv.yaml
+++ b/scc2425-tukano/yamlfiles/postgres-pv.yaml
@@ -9,4 +9,4 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /mnt/data/postgres #CHANGE THIS TO A LOCAL DIRECTORY??
+    path: /mnt/data/postgres 
