--- a/scc2425-tukano/yamlfiles/deploymentblobs.yaml
+++ b/scc2425-tukano/yamlfiles/deploymentblobs.yaml
@@ -47,14 +47,10 @@ spec:
           failureThreshold: 5
           initialDelaySeconds: 3
           periodSeconds: 3
-      initContainers:
-      - name: wait-for-rabbitmq
-        image: busybox
-        command: ['sh', '-c', 'until nc -zv rabbitmq 5672; do echo waiting for rabbitmq; sleep 2; done;']
-        resources:
-          requests:
-            cpu: 1m
-            memory: 50Mi
-          limits:
-            cpu: 75m
-            memory: 128Mi
+        volumeMounts:
+        - name: blob-storage
+          mountPath: /mnt/blob-data
+      volumes:
+      - name: blob-storage
+        persistentVolumeClaim:
+          claimName: blob-service-pvc
