--- a/scc2425-tukano/yamlfiles/postgres-pv.yaml
+++ b/scc2425-tukano/yamlfiles/postgres-pv.yaml
@@ -7,6 +7,8 @@ spec:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /mnt/data/postgres 
+  storageClassName: azurefile
+  azureFile:
+    secretName: azure-secret
+    shareName: postgres-share
+    readOnly: false
