--- a/scc2425-tukano/yamlfiles/deploymentblobs.yaml
+++ b/scc2425-tukano/yamlfiles/deploymentblobs.yaml
@@ -48,9 +48,9 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 3
         volumeMounts:
-        - name: blob-storage
-          mountPath: /mnt/blob-data
+        - mountPath: /var/lib/postgresql/data
+          name: postgres-storage
       volumes:
-      - name: blob-storage
+      - name: postgres-storage
         persistentVolumeClaim:
-          claimName: blob-service-pvc
+          claimName: postgres-pvc
