--- a/scc2425-tukano/yamlfiles/service.yaml
+++ b/scc2425-tukano/yamlfiles/service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: tukano-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - name: http
-    port: 8080
+  - port: 8080
     targetPort: 8080
   selector:
     app: tukano-service
