--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -88,6 +88,13 @@
 	</build>
 	<dependencies>
 		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>javax.servlet-api</artifactId>
+    		<version>4.0.1</version>
+    		<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.1.1</version>
