--- a/scc2425-tukano/yamlfiles/postgres-pvc.yaml
+++ b/scc2425-tukano/yamlfiles/postgres-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: azurefile
+  storageClassName: local-storage
   resources:
     requests:
       storage: 1Gi
