--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -160,5 +160,10 @@
 			<artifactId>resteasy-servlet-initializer</artifactId>
 			<version>6.2.10.Final</version>
 		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>4.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
